[gtk] RomDataView: Fix lblDesc alignment on GTK+ 3.x.

When using GtkSizeGroup, the alignment set using the
gtk_widget_set_?align() functions doesn't work. Use the newer
gtk_label_set_?align() functions instead.

NOTE: These functions were added in GTK+ 3.16. For older GTK+ 3.x,
use gtk_misc_set_alignment(), which *does* work with GtkSizeGroup,
but is marked as deprecated.

GTK+ 2.x only uses gtk_misc_set_alignment().

References:
- http://stackoverflow.com/questions/24994255/how-to-left-align-a-gtk-label-when-its-width-is-set-by-gtksizegroup
- https://bugzilla.gnome.org/show_bug.cgi?id=733981